--- a/nx.json
+++ b/nx.json
@@ -54,7 +54,7 @@
       "cache": true
     },
     "check:lint*": {
-      "inputs": ["default", "{workspaceRoot}/eslint.config.mjs", "{workspaceRoot}/.eslintignore"],
+      "inputs": ["default", "{workspaceRoot}/eslint.config.mjs"],
       "cache": true
     }
   },
