--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -55,38 +55,38 @@ jobs:
                 return;
               }
               
-              // Get detailed PR information including mergeable state
-              const { data: prDetails } = await github.rest.pulls.get({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: prNumber
-              });
+              # // Get detailed PR information including mergeable state
+              # const { data: prDetails } = await github.rest.pulls.get({
+              #   owner: context.repo.owner,
+              #   repo: context.repo.repo,
+              #   pull_number: prNumber
+              # });
               
-              // Check if PR is mergeable and all requirements are satisfied
-              if (prDetails.mergeable === false) {
-                core.setFailed(`PR #${prNumber} is not in a mergeable state. Please resolve conflicts before deploying.`);
-                return;
-              }
+              # // Check if PR is mergeable and all requirements are satisfied
+              # if (prDetails.mergeable === false) {
+              #   core.setFailed(`PR #${prNumber} is not in a mergeable state. Please resolve conflicts before deploying.`);
+              #   return;
+              # }
               
-              // The mergeable_state can be one of: clean, dirty, blocked, unstable, or unknown
-              // Only 'clean' means all requirements are met (checks passed, approvals received, no conflicts)
-              if (prDetails.mergeable_state !== 'clean') {
-                // Get more details about why it's not clean
-                let reason = '';
+              # // The mergeable_state can be one of: clean, dirty, blocked, unstable, or unknown
+              # // Only 'clean' means all requirements are met (checks passed, approvals received, no conflicts)
+              # if (prDetails.mergeable_state !== 'clean') {
+              #   // Get more details about why it's not clean
+              #   let reason = '';
                 
-                if (prDetails.mergeable_state === 'blocked') {
-                  reason = 'required checks or approvals are missing';
-                } else if (prDetails.mergeable_state === 'dirty') {
-                  reason = 'there are merge conflicts';
-                } else if (prDetails.mergeable_state === 'unstable') {
-                  reason = 'required checks are failing';
-                } else {
-                  reason = `the mergeable state is "${prDetails.mergeable_state}"`;
-                }
+              #   if (prDetails.mergeable_state === 'blocked') {
+              #     reason = 'required checks or approvals are missing';
+              #   } else if (prDetails.mergeable_state === 'dirty') {
+              #     reason = 'there are merge conflicts';
+              #   } else if (prDetails.mergeable_state === 'unstable') {
+              #     reason = 'required checks are failing';
+              #   } else {
+              #     reason = `the mergeable state is "${prDetails.mergeable_state}"`;
+              #   }
                 
-                core.setFailed(`PR #${prNumber} is not ready to merge: ${reason}. Please resolve all issues before deploying.`);
-                return;
-              }
+              #   core.setFailed(`PR #${prNumber} is not ready to merge: ${reason}. Please resolve all issues before deploying.`);
+              #   return;
+              # }
               
               console.log(`PR #${prNumber} is in a clean mergeable state. All requirements satisfied. Proceeding with beta deployment.`);
               
@@ -104,14 +104,13 @@ jobs:
           echo "beta_identifier=PR-${{ steps.pr-info.outputs.pr_number }}" >> $GITHUB_OUTPUT
 
   deploy:
-    if: false
     name: Deploy BETA/BugBash Feature
     uses: ./.github/workflows/deploy.yml
     needs: get-deploy-inputs
     with:
       environment: beta
       bugsnag_release_stage: beta
-      s3_dir_path: beta/${{ needs.get-deploy-inputs.outputs.beta_identifier }}/v3
+      s3_dir_path: beta/${{ needs.get-deploy-inputs.outputs.beta_identifier }}
       s3_dir_path_legacy: beta/${{ needs.get-deploy-inputs.outputs.beta_identifier }}/v1.1
       action_type: ''
     secrets:
